feat(theme): добавлена многопалитровая система тем с поддержкой светлых и тёмных режимов
Реализована система переключения между тремя тематическими палитрами (детская, семейная, родительская)
с автоматическим сохранением пользовательских предпочтений в localStorage.

- Создан композабл useTheme для управления темами
- Добавлен тип BodyMode для типизации тематических режимов
- Обновлены файлы локализации с переводами кнопок переключения
- Настроены пользовательские варианты Tailwind CSS через data-атрибуты
- Определены CSS-переменные для всех палитр с поддержкой dark mode
- Интегрирован прототип переключателя тем в основной компонент приложения

Система автоматически восстанавливает выбранную тему при загрузке страницы
и обеспечивает совместимость с системным dark mode.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,8 @@
 {
-  "hello": "Hello"
+  "hello": "Hello",
+  "switch language": "Switch language",
+  "introduce yourself": "Introduce yourself",
+  "kids": "Kids",
+  "family": "Family",
+  "parents": "Parents"
 }
