--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,3 +1,8 @@
 {
-  "hello": "Hallo"
+  "hello": "Hallo",
+  "switch language": "Sprache wechseln",
+  "introduce yourself": "Stellen Sie sich vor",
+  "kids": "Kinder",
+  "family": "Familie",
+  "parents": "Eltern"
 }
