--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,3 +1,8 @@
 {
-  "hello": "Привет"
+  "hello": "Привет",
+  "switch language": "Переключить язык",
+  "introduce yourself": "Представьтесь",
+  "kids": "Дети",
+  "family": "Семья",
+  "parents": "Родители"
 }
