feat(i18n): добавить динамическое обновление SEO-тегов при смене языка
Реализована система автоматического обновления мета-тегов (title, description, keywords)
и атрибута lang при переключении локали. Создан утилитарный модуль seoUtils.ts с функциями
updateSEO() и updateSEOWithKeys() для гибкого управления SEO-данными.

- Добавлены SEO-ключи в файлы локализации (ru.json, en.json, de.json)
- Создан модуль src/utils/seoUtils.ts для работы с мета-тегами
- Интегрирован вызов updateSEO() в функцию setLocale()
- Обеспечена поддержка создания мета-тегов при их отсутствии в DOM

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,5 +4,8 @@
   "introduce yourself": "Stellen Sie sich vor",
   "kids": "Kinder",
   "family": "Familie",
-  "parents": "Eltern"
+  "parents": "Eltern",
+  "seo.title": "Kinder Sportclub Netzwerk in Deutschland, Österreich & Schweiz | Kidoo Club",
+  "seo.description": "Kidoo Club bietet Kindern von 4–14 Jahren ganzjährig Sport und Spaß. Von Fußball und Schwimmen bis hin zu Skifahren, Klettern und Rafting — ein Abo, viele Sportarten. Jetzt Teil der Sportgemeinschaft in DACH werden!",
+  "seo.keywords": "Kinder Sportclub Deutschland, Österreich Schweiz, Kinder Sportarten, Sport für Kinder, Jugendsport, neue Sportarten ausprobieren, Familiengemeinschaft, Kinderski, Kinderfußball, DACH Club"
 }
