--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,8 @@
   "introduce yourself": "Introduce yourself",
   "kids": "Kids",
   "family": "Family",
-  "parents": "Parents"
+  "parents": "Parents",
+  "seo.title": "Kids Sports Club Network in Germany, Austria & Switzerland | Kidoo Club",
+  "seo.description": "Discover Kidoo Club — a year-round sports community for children aged 4–14. From football and swimming to skiing, climbing, and rafting — one membership gives kids endless sports experiences in Germany, Austria, and Switzerland.",
+  "seo.keywords": "kids sports club Germany, Austria Switzerland, children activities, kids fitness, youth sports, try new sports, family community, kids ski, kids football, children’s club DACH"
 }
