--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -4,5 +4,8 @@
   "introduce yourself": "Представьтесь",
   "kids": "Дети",
   "family": "Семья",
-  "parents": "Родители"
+  "parents": "Родители",
+  "seo.title": "Сеть детских спортивных клубов в Германии, Австрии и Швейцарии | Kidoo Club",
+  "seo.description": "Kidoo Club — это круглогодичный спорт для детей 4–14 лет. Футбол, плавание, лыжи, скалолазание, рафтинг и десятки других активностей. Один абонемент — сотни возможностей в Германии, Австрии и Швейцарии.",
+  "seo.keywords": "детский спортивный клуб Германия Австрия Швейцария, спорт для детей, секции для детей, детский фитнес, детский футбол, детские лыжи, активный отдых для детей, клуб для детей DACH"
 }
