refactor(i18n): удаление SEO-данных из файлов локализации
* Удалены ключи seo.title, seo.description и seo.keywords из всех языковых файлов
* Очищены неиспользуемые переводы после перехода на API-получение SEO-данных
* Уменьшен размер бандла локализации за счёт удаления избыточных данных

SEO-данные теперь получаются динамически через API запросы в seoUtils,
локали больше не содержат статичных SEO-переводов.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,8 +4,5 @@
   "introduce yourself": "Introduce yourself",
   "kids": "Kids",
   "family": "Family",
-  "parents": "Parents",
-  "seo.title": "Kids Sports Club Network in Germany, Austria & Switzerland | Kidoo Club",
-  "seo.description": "Discover Kidoo Club — a year-round sports community for children aged 4–14. From football and swimming to skiing, climbing, and rafting — one membership gives kids endless sports experiences in Germany, Austria, and Switzerland.",
-  "seo.keywords": "kids sports club Germany, Austria Switzerland, children activities, kids fitness, youth sports, try new sports, family community, kids ski, kids football, children’s club DACH"
+  "parents": "Parents"
 }
