feat(palette): заменить обозначение палитры "kid" на "child"
Обновлены css-файлы, файлы локалей, компосабл для переключения палитры и документация.
Также изменён App.vue с кнопкой переключения палитры.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -2,7 +2,7 @@
   "hello": "Hallo",
   "switch language": "Sprache wechseln",
   "introduce yourself": "Stellen Sie sich vor",
-  "kids": "Kinder",
+  "child": "Kinder",
   "family": "Familie",
   "parents": "Eltern"
 }
