--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
   "hello": "Hello",
   "switch language": "Switch language",
   "introduce yourself": "Introduce yourself",
-  "kids": "Kids",
+  "child": "Сhild",
   "family": "Family",
   "parents": "Parents"
 }
