--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,7 +2,7 @@
   "hello": "Привет",
   "switch language": "Переключить язык",
   "introduce yourself": "Представьтесь",
-  "kids": "Дети",
+  "child": "Дети",
   "family": "Семья",
   "parents": "Родители"
 }
