feat(header): декомпозиция хедера на модульные компоненты с API-интеграцией
Разделен монолитный компонент HeaderApp на специализированные модули:
- HeaderToggleMenu для управления мобильным меню
- HeaderNavList с динамической загрузкой через apiUtils
- HeaderNav как семантическая обёртка навигации

Добавлена поддержка адаптивного дизайна с анимированным гамбургер-меню,
полная локализация интерфейса и соответствие стандартам доступности (ARIA).
Реализована автоматическая перезагрузка меню при смене языка.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,5 +4,9 @@
   "introduce yourself": "Stellen Sie sich vor",
   "child": "Kinder",
   "family": "Familie",
-  "parents": "Eltern"
+  "parents": "Eltern",
+  "aria.nav.toTop": "Zum Seitenanfang",
+  "aria.nav.openMenu": "Navigationsmenü öffnen",
+  "aria.nav.closeMenu": "Navigationsmenü schließen",
+  "aria.nav.main": "Hauptnavigation"
 }
