feat(header): добавить переключатель языков с флагами
Создан компонент SwitchLocale для переключения между ru/en/de локалями
с визуальными индикаторами-флагами. Добавлен обёртывающий компонент
HeaderSwitchers для группировки всех переключателей в навигации.

Обновлены файлы локализации с новыми ключами для названий языков.
Добавлены CSS-стили с анимациями hover для кнопки переключателя и
элементов навигационного меню.

Удалён старый код переключателя из App.vue, логика перенесена в
соответствующий компонент заголовка для улучшения архитектуры.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,6 +1,9 @@
 {
-  "hello": "Hallo",
   "switch language": "Sprache wechseln",
+  "english": "Englisch",
+  "russian": "Russisch",
+  "german": "Deutsch",
+  "switch to ru": "Auf Russisch umschalten",
   "introduce yourself": "Stellen Sie sich vor",
   "child": "Kinder",
   "family": "Familie",
