feat(header): добавить переключатель палитр в навигацию
- Расширен композабл useTheme с логикой флагов режимов
- Создан компонент SwitchPalette с перекрестной логикой управления
- Добавлены стили для иконок с поддержкой активных состояний
- Интегрирован переключатель в HeaderSwitchers
- Добавлена локализация для элементов доступности

Переключатель поддерживает три режима: детский, семейный и родительский
через комбинацию двух независимых булевых флагов с сохранением выбора
в localStorage и полной поддержкой ARIA-атрибутов.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -11,5 +11,10 @@
   "aria.nav.toTop": "Zum Seitenanfang",
   "aria.nav.openMenu": "Navigationsmenü öffnen",
   "aria.nav.closeMenu": "Navigationsmenü schließen",
-  "aria.nav.main": "Hauptnavigation"
+  "aria.nav.main": "Hauptnavigation",
+  "header.switcher.groupLabel": "Ansichtsmodus wechseln",
+  "header.switcher.childMode": "Kindmodus",
+  "header.switcher.parentMode": "Elternmodus",
+  "header.switcher.childIconAlt": "Kind-Symbol",
+  "header.switcher.parentIconAlt": "Eltern-Symbol"
 }
