feat(audience): добавить компонент выбора роли пользователя
Область: audience-switcher, ui, localization

Создан новый компонент AudienceSwitcher с использованием универсального
SectionBlock для выбора роли пользователя (ребёнок/семья/родитель).

Изменения:
- Создан компонент AudienceSwitcherItem для отдельной кнопки выбора
- Создан основной компонент AudienceSwitcher с интеграцией SectionBlock
- Добавлена поддержка доступности (ARIA roles, keyboard navigation)
- Удалён временный код переключения ролей из App.vue
- Обновлены файлы локализации с новыми ключами introduceYourself
- Добавлены стили audience-switcher.css с адаптивным layout
- Зарегистрирован компонент в конфигурациях layout для всех ролей
- Добавлен класс .container в elements.css

Компонент использует композаблы useTheme и useLayout для смены темы
и загрузки соответствующей конфигурации секций.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -4,10 +4,9 @@
   "russian": "Russisch",
   "german": "Deutsch",
   "switch to ru": "Auf Russisch umschalten",
-  "introduce yourself": "Stellen Sie sich vor",
   "child": "Kinder",
   "family": "Familie",
-  "parents": "Eltern",
+  "parent": "Eltern",
   "aria.nav.toTop": "Zum Seitenanfang",
   "aria.nav.openMenu": "Navigationsmenü öffnen",
   "aria.nav.closeMenu": "Navigationsmenü schließen",
@@ -16,5 +15,10 @@
   "header.switcher.childMode": "Kindmodus",
   "header.switcher.parentMode": "Elternmodus",
   "header.switcher.childIconAlt": "Kind-Symbol",
-  "header.switcher.parentIconAlt": "Eltern-Symbol"
+  "header.switcher.parentIconAlt": "Eltern-Symbol",
+  "introduceYourself": {
+    "title": "Stellen Sie sich vor",
+    "subtitle": "Wer sind Sie heute auf unserer Seite?",
+    "description": "Wählen Sie Ihre Rolle, damit wir Ihnen die Inhalte anzeigen können, die für Sie am relevantesten sind – für Kinder, für Eltern oder für die ganze Familie."
+  }
 }
