feat(api): добавить динамическую загрузку переводов для AudienceSwitcher
Реализована инфраструктура для получения переводов через API вместо
статического хранения в файлах локализации.

Изменения:
- Создан композабл useAudienceSwitcherTranslations с кэшированием
- Добавлены TypeScript типы для API-ответов (audienceSwitcher.ts)
- Реализован универсальный компонент UiAlert для отображения ошибок
- Подготовлены mock-данные в public/api/v1/audience-switcher/
- Добавлена функция валидации локали isValidLocale в i18n.ts
- Обновлён компонент AudienceSwitcher для работы с API
- Удалены дублирующие переводы из статических файлов локализации
- Добавлены стили для ui-alert и утилиты bg-palette-text-50

Композабл поддерживает автоматическую синхронизацию с i18n,
глобальное кэширование и обработку ошибок загрузки.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -15,10 +15,5 @@
   "header.switcher.childMode": "Child mode",
   "header.switcher.parentMode": "Parent mode",
   "header.switcher.childIconAlt": "Child icon",
-  "header.switcher.parentIconAlt": "Parent icon",
-  "introduceYourself": {
-    "title": "Introduce yourself",
-    "subtitle": "Who are you here for today?",
-    "description": "Choose your role so we can show you the information that matters most to you — for kids, for parents, or for the whole family."
-  }
+  "header.switcher.parentIconAlt": "Parent icon"
 }
