--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -15,10 +15,5 @@
   "header.switcher.childMode": "Kindmodus",
   "header.switcher.parentMode": "Elternmodus",
   "header.switcher.childIconAlt": "Kind-Symbol",
-  "header.switcher.parentIconAlt": "Eltern-Symbol",
-  "introduceYourself": {
-    "title": "Stellen Sie sich vor",
-    "subtitle": "Wer sind Sie heute auf unserer Seite?",
-    "description": "Wählen Sie Ihre Rolle, damit wir Ihnen die Inhalte anzeigen können, die für Sie am relevantesten sind – für Kinder, für Eltern oder für die ganze Familie."
-  }
+  "header.switcher.parentIconAlt": "Eltern-Symbol"
 }
