fix(i18n): локализовано сообщение об ошибке в AudienceSwitcher
Сообщение об ошибке получения данных в
src/components/dynamic/AudienceSwitcher.vue
переведено на использование i18n вместо жёстко заданного текста.

Обновлены файлы локализации для ru, en и de
в каталоге src/locales.

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -15,5 +15,8 @@
   "header.switcher.childMode": "Kindmodus",
   "header.switcher.parentMode": "Elternmodus",
   "header.switcher.childIconAlt": "Kind-Symbol",
-  "header.switcher.parentIconAlt": "Eltern-Symbol"
+  "header.switcher.parentIconAlt": "Eltern-Symbol",
+  "errors": {
+    "contentLoadFailed": "Inhalt konnte nicht geladen werden"
+  }
 }
