--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -15,5 +15,8 @@
   "header.switcher.childMode": "Режим ребенка",
   "header.switcher.parentMode": "Режим родителя",
   "header.switcher.childIconAlt": "Иконка ребенка",
-  "header.switcher.parentIconAlt": "Иконка родителя"
+  "header.switcher.parentIconAlt": "Иконка родителя",
+  "errors": {
+    "contentLoadFailed": "Не удалось загрузить содержимое"
+  }
 }
